--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@sbrew.com/atv",
-  "version": "0.0.25",
+  "version": "0.0.26",
   "description": "Classless JS framework for Rails",
   "main": "atv.js",
   "scripts": {
-    "test": "cd atv_test; bin/rails test:system"
+    "test": "cd atv-test; bin/rails test:system"
   },
   "repository": {
     "type": "git",
