--- a/bin/build
+++ b/bin/build
@@ -1,8 +1,6 @@
 #!/bin/bash
 
-
-echo "Check for any helpful new messages from JSlint, this step is not a showstoper"
-node jslint.mjs --browser --devel --white atv.js
+node jslint.mjs atv.js
 
 npx eslint atv.js || quit "Please fix eslint"
 npx prettier --trailing-comma none atv.js --write
