--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,12 +32,15 @@ jobs:
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@78c01b705fd9d5ad960d432d3a0cfa341d50e410 # v1.179.1
         with:
+          working-directory: ./atv-test
           bundler-cache: true
       # Add or replace database setup steps here
       - name: Set up database schema
+        working-directory: ./atv-test
         run: bin/rails db:schema:load
       # Add or replace test runners here
       - name: Run tests
+        working-directory: ./atv-test
         run: bin/rake
 
   lint:
@@ -49,12 +52,10 @@ jobs:
         uses: ruby/setup-ruby@78c01b705fd9d5ad960d432d3a0cfa341d50e410 # v1.179.1
         with:
           bundler-cache: true
+          working-directory: ./atv-test          
       - name: Generate binstubs
+        working-directory: ./atv-test
         run: bundle binstubs bundler-audit brakeman rubocop
-      # Add or replace any other lints here
-      - name: Security audit dependencies
-        run: bin/bundler-audit --update
-      - name: Security audit application code
-        run: bin/brakeman -q -w2
       - name: Lint Ruby files
+        working-directory: ./atv-test
         run: bin/rubocop --parallel
