--- a/bin/build
+++ b/bin/build
@@ -5,7 +5,8 @@ node jslint.mjs atv.js
 npx eslint atv.js || quit "Please fix eslint"
 npx prettier --trailing-comma none atv.js --write
 
-sed -e "s/activate, version/activate, version, pascalize, dasherize, allVariants, actionsFor/" atv.js > atv-test/app/javascript/atv-test.js
+# sed -e "s/activate, version/activate, version, pascalize, dasherize, allVariants, actionsFor/" atv.js > atv-test/app/javascript/atv-test.js
+sed -e "s/activate, version/activate, version, actionsFor/" atv.js > atv-test/app/javascript/atv-test.js
 echo "TEST VERSION:"
 tail atv-test/app/javascript/atv-test.js
 
