--- a/bin/build
+++ b/bin/build
@@ -1,19 +1,19 @@
 #!/bin/bash
 
-node jslint.mjs atv.js
+# for f in atv.js atv/*.js; do
+#   node jslint.mjs $f
 
-npx eslint atv.js || quit "Please fix eslint"
-npx prettier --trailing-comma none atv.js --write
+#   npx eslint $f || quit "Please fix eslint"
+#   npx prettier --trailing-comma none $f --write
+# done
 
 # sed -e "s/activate, version/activate, version, pascalize, dasherize, allVariants, actionsFor/" atv.js > atv-test/app/javascript/atv-test.js
-sed -e "s/activate, version/activate, version, actionsFor/" atv.js > atv-test/app/javascript/atv-test.js
-echo "TEST VERSION:"
-tail atv-test/app/javascript/atv-test.js
-
+# sed -e "s/activate, version/activate, version, actionsFor/" atv.js > atv-test/app/javascript/atv-test.js
+# echo "TEST VERSION:"
+# tail atv-test/app/javascript/atv-test.js
 
 cd atv-test
 bin/rails assets:clobber
-bin/rails assets:precompile
 bin/rails test:system || exit "Please fix tests"
 
 echo "Build succeeded"
